objects/EXPRN__Owner_Grant__c.object
<CustomObject>
    <description>Stores owner information of a business</description>
    <fields>
        <fullName>EXPRN__Address_Information__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Information</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Address__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Age_of_oldest_trade__c</fullName>
        <defaultValue>&apos;0 MO&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Age of oldest trade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Available_rev_credit_reported_last_6mnth__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Available rev credit reported last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bankcard_bal_to_limit_ratio_last_6mnth__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Bankcard bal to limit ratio last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankruptcies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Collections_legal_filings_or_derog_accts__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Collections,legal filings or derog accts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Consumer_Statements_On_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer/Fraud Statements on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_inquiries_last_6_months__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit inquiries last 6 months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Derog_public_record_greater_than_250__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Derog public record greater than $250</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Derog_public_records_filed_within_24mnth__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Derog public records filed within 24mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Driver_s_License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver&apos;s License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business__c</fullName>
        <label>Experian Business</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Owner_Guarantors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__FACTA_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FACTA Address Mismatch Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP11__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP12__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP13__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP13</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_1__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_2__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_3__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Statement__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Statement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Generation_code__c</fullName>
        <label>Generation code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__In_dispute1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In dispute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Inq_prev_6_mnths__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Inquiries previous 6 months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_Pull_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Pull Profile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Middle_Initial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Initial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Monthly_Payments__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Payments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Oldest_Trade_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oldest Trade Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Oldest_trade_opened__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Oldest trade opened</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Open_bankcard_trades_reported_last_6mnth__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Open bankcard trades reported last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Open_revolving_trades__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Open revolving trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Score_Type__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Score Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Paid_Trades__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid Trades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Past_Due_Amount__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Past Due Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Prcnt_auto_lease_trade_30days_delinquent__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Prcnt auto lease trade 30+day delinquent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Prcnt_real_estate_trd_30days_delinquent__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <description>Percentage of real estate trades 30+ days delinquent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prcnt real estate trd 30days+ delinquent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Presently_delinquent_derogatory__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Presently delinquent/derogatory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Previously_delinquent_derogatory__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Previously delinquent/derogatory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Profile_Pull_Day__c</fullName>
        <formula>Today() -  EXPRN__Last_Pull_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Pull Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Satisfactory_Trades_Last_24_Months__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Satisfactory Trades Last 24 Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Satisfactory_Trades__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Satisfactory Trades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Factors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Factors</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scorex_plus_score__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Scorex plus score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Social_Sec_No__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Sec No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Legal_Filings__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Legal Filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trades__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Trades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_no_of_inq__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Total number of inquiries</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trades_presently_delinquent_last_6months__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Trades presently delinquent last 6months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Year_of_birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year of birth</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Experian Owner/Guarantor</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner/Guarantor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Owners/Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>